--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel-plugin-import": "^1.13.1",
+    "customize-cra": "^1.0.0",
     "dotenv": "^8.2.0",
     "fontsource-roboto": "^3.0.3",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-uuid": "^1.0.2",
     "typeface-roboto": "^1.1.13"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
